--- a/package.json
+++ b/package.json
@@ -9,22 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/icons": "^3.7.0",
+    "@sanity/vision": "^3.86.1",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^7.2.0",
     "@tailwindcss/postcss": "^4.1.4",
     "@tanstack/react-query": "^5.74.4",
+    "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.1",
     "framer-motion": "^12.9.2",
     "lucide-react": "^0.503.0",
     "next": "15.3.1",
     "next-auth": "^4.24.11",
+    "next-sanity": "^9.10.2",
     "next-seo": "^6.6.0",
+    "node-fetch": "^3.3.2",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "sanity": "^3.86.1",
+    "styled-components": "^6.1.17",
     "tailwindcss": "^4.1.4",
+    "xml2js": "^0.6.2",
     "zod": "^3.24.3"
   },
   "devDependencies": {
